Fixes #8007 - Support Loom.
Implemented virtual threads support for HTTP/1.1, HTTP/2 and HTTP/3.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>