@@ -30,9 +30,9 @@
 
   <profiles>
     <profile>
-      <id>jdk17</id>
+      <id>enable-incubator-foreign</id>
       <activation>
-        <jdk>[17,)</jdk>
+        <jdk>[17,19)</jdk>
       </activation>
       <build>
         <plugins>
@@ -44,6 +44,25 @@
                 ${jetty.surefire.argLine}
                 --add-modules jdk.incubator.foreign
                 --enable-native-access ALL-UNNAMED
+              </argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>enable-foreign-and-virtual-threads-preview</id>
+      <activation>
+        <jdk>[19,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>
+                @{argLine}
+                --enable-preview
               </argLine>
             </configuration>
           </plugin>
